--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <link rel="icon" href="https://i.imgur.com/eKjFtd1.png" sizes="32x32" type="image/png">
   <link rel="apple-touch-icon" href="https://i.imgur.com/eKjFtd1.png">
 
-
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -67,6 +65,19 @@
       padding:3.2rem 1rem 1.6rem;
     }
 
+    /* Logo arredondado (ícone do site) */
+    .site-logo{
+      width:64px;
+      height:64px;
+      border-radius:16px; /* "meio arredondado" */
+      border:1px solid rgba(255,255,255,.14);
+      box-shadow:0 14px 34px rgba(0,0,0,.38);
+      display:block;
+      margin:0 auto .9rem;
+      object-fit:cover;
+      background:rgba(0,0,0,.25);
+    }
+
     header h1{
       font-family:'Orbitron',sans-serif;
       font-size:clamp(2.6rem, 5.2vw, 4.7rem);
@@ -88,7 +99,7 @@
     .stats{
       margin:1.4rem auto 1.8rem;
       display:grid;
-      grid-template-columns:repeat(3, 1fr);
+      grid-template-columns:repeat(auto-fit, minmax(240px, 1fr));
       gap:1rem;
     }
 
@@ -123,11 +134,6 @@
     .stat strong{
       color:#ff6b6b;
       font-weight:800;
-    }
-
-    @media(max-width:860px){
-      .stats{grid-template-columns:1fr; }
-      .stat{min-height:58px;}
     }
 
     /* ===== MENUS ===== */
@@ -212,32 +218,6 @@
       color:#fff;
     }
 
-    /* ===== ÁREA CENTRAL (opcional, para dar “corpo” no meio) ===== */
-    .center-card{
-      margin:0 auto 2.2rem;
-      width:min(var(--max), 100%);
-      border-radius:22px;
-      border:1px solid rgba(255,255,255,.10);
-      background:linear-gradient(180deg, rgba(20,20,20,.55), rgba(12,12,12,.35));
-      box-shadow:var(--shadow);
-      padding:1.1rem 1.1rem 1.2rem;
-      text-align:center;
-    }
-
-    .center-card h2{
-      font-size:1.05rem;
-      color:#fff;
-      letter-spacing:.3px;
-    }
-
-    .center-card p{
-      margin-top:.35rem;
-      color:var(--text-dim);
-      font-weight:500;
-      font-size:.95rem;
-      line-height:1.55;
-    }
-
     /* ===== MOBILE: menus viram grid bonito ===== */
     @media(max-width:768px){
       header{padding:2.4rem 1rem 1rem}
@@ -264,7 +244,7 @@
       }
     }
 
-    /* ===== MODAL VIP ===== */
+    /* ===== MODAIS ===== */
     .modal{
       position:fixed;
       inset:0;
@@ -311,8 +291,15 @@
       align-items:flex-start;
     }
 
-    .modal-content button{
+    .modal-content .btn-row{
+      display:flex;
+      gap:.75rem;
       margin-top:1.1rem;
+      flex-wrap:wrap;
+    }
+
+    .modal-content button,
+    .modal-content a.action{
       width:100%;
       padding:.8rem;
       border:none;
@@ -323,10 +310,18 @@
       font-weight:800;
       transition:transform var(--transition), filter var(--transition);
       border:1px solid rgba(255,255,255,.12);
+      text-decoration:none;
+      text-align:center;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap:.6rem;
     }
 
-    .modal-content button:hover{transform:translateY(-1px); filter:saturate(1.05)}
-    .modal-content button:active{transform:translateY(0)}
+    .modal-content button:hover,
+    .modal-content a.action:hover{transform:translateY(-1px); filter:saturate(1.05)}
+    .modal-content button:active,
+    .modal-content a.action:active{transform:translateY(0)}
 
     /* ===== FOOTER ===== */
     footer{
@@ -348,6 +343,7 @@
 <body>
 
   <header class="wrap">
+    <img class="site-logo" src="https://i.imgur.com/eKjFtd1.png" alt="Ícone do Portal SiqueiraX">
     <h1>Portal SiqueiraX</h1>
     <p>Maior central de gamemodes do GTA SA:MP</p>
   </header>
@@ -359,18 +355,11 @@
         <span>Carregando Discord...</span>
       </div>
 
-      <div class="stat" id="userCount" role="status" aria-live="polite">
-        <i class="fas fa-users"></i>
-        <span>Usuários: <strong>...</strong></span>
-      </div>
-
       <div class="stat" id="tempo-online" role="status" aria-live="polite">
         <i class="fas fa-clock"></i>
         <span>Online há <strong>...</strong></span>
       </div>
     </section>
-
-  
   </main>
 
   <!-- MENU ESQUERDO -->
@@ -384,9 +373,14 @@
     </a>
 
     <!-- PRINCIPAL -->
-    <a href="loginpainel.html" class="menu-btn primary" aria-label="Painel SiqueiraX (principal)">
-      <i class="fas fa-gamepad"></i> Painel SiqueiraX
+    <a href="loginpainel.html" class="menu-btn primary" aria-label="Painel (principal)">
+      <i class="fas fa-gamepad"></i> Painel
       <span class="tag">PRINCIPAL</span>
+    </a>
+
+    <!-- DESBAN -->
+    <a href="desban.html" class="menu-btn" id="desbanBtn">
+      <i class="fas fa-unlock"></i> Desban
     </a>
 
     <a href="servidores.html" class="menu-btn">
@@ -400,9 +394,7 @@
       <i class="fas fa-crown"></i> Benefícios VIP
     </a>
 
-    <a href="logins.html" class="menu-btn">
-      <i class="fas fa-code"></i> Profissionais
-    </a>
+    <!-- REMOVIDO: Profissionais -->
 
     <a href="https://discord.gg/HSd3YcWryb" target="_blank" rel="noopener noreferrer" class="menu-btn">
       <i class="fab fa-discord"></i> Discord
@@ -425,22 +417,30 @@
     </div>
   </div>
 
+  <!-- MODAL DESBAN -->
+  <div class="modal" id="desbanModal" aria-hidden="true">
+    <div class="modal-content" role="dialog" aria-modal="true" aria-label="Desban SiqueiraX">
+      <h2>Banimento SiqueiraX Community</h2>
+      <ul>
+        <li>🚫 <span>Usuários que foram banidos da comunidade</span></li>
+        <li>💰 <span>Valor desban: <strong>R$ 50,00</strong></span></li>
+        <li>📲 <span>Caso tenha interesse, entre em contato via WhatsApp com SiqueiraX</span></li>
+      </ul>
+
+      <div class="btn-row">
+        <a class="action" id="whatsDesban" target="_blank" rel="noopener noreferrer" href="#">
+          <i class="fab fa-whatsapp"></i> Falar no WhatsApp
+        </a>
+        <button type="button" id="closeDesban">Fechar</button>
+      </div>
+    </div>
+  </div>
+
   <footer>
     © SiqueiraX
   </footer>
 
   <script>
-    async function fetchUserCount() {
-      const el = document.querySelector("#userCount strong");
-      try {
-        const r = await fetch("/.netlify/functions/stats", { cache: "no-store" });
-        const d = await r.json();
-        el.textContent = (typeof d.total === "number" || typeof d.total === "string") ? d.total : "—";
-      } catch {
-        el.textContent = "—";
-      }
-    }
-
     async function loadDiscord() {
       const el = document.querySelector("#discordStats span");
       try {
@@ -452,11 +452,42 @@
       }
     }
 
-    function tempoOnline() {
-      document.querySelector("#tempo-online strong").textContent = "desde 2025";
+    // Conta tempo online desde 11/05/2025
+    function diffMonthsDays(fromDate, toDate){
+      // Normaliza horários pra evitar bug de fuso/horário
+      const start = new Date(fromDate.getFullYear(), fromDate.getMonth(), fromDate.getDate());
+      const end = new Date(toDate.getFullYear(), toDate.getMonth(), toDate.getDate());
+
+      if (end < start) return { months: 0, days: 0 };
+
+      let months = (end.getFullYear() - start.getFullYear()) * 12 + (end.getMonth() - start.getMonth());
+      let anchor = new Date(start.getFullYear(), start.getMonth() + months, start.getDate());
+
+      // Se passou do final do mês (ex: 31), ajusta o anchor
+      if (anchor > end){
+        months--;
+        anchor = new Date(start.getFullYear(), start.getMonth() + months, start.getDate());
+      }
+
+      // Dias restantes
+      const msDay = 24 * 60 * 60 * 1000;
+      const days = Math.max(0, Math.round((end - anchor) / msDay));
+
+      return { months, days };
     }
 
-    // Modal VIP (mais robusto)
+    function tempoOnline() {
+      const createdAt = new Date(2025, 4, 11); // 11/05/2025 (mês 4 = Maio)
+      const now = new Date();
+      const { months, days } = diffMonthsDays(createdAt, now);
+
+      const mTxt = months === 1 ? "mês" : "meses";
+      const dTxt = days === 1 ? "dia" : "dias";
+
+      document.querySelector("#tempo-online strong").textContent = `${months} ${mTxt} ${days} ${dTxt}`;
+    }
+
+    // ===== Modal VIP (mais robusto) =====
     const vipModal = document.getElementById("vipModal");
     const vipBtn = document.getElementById("vipBtn");
     const closeVip = document.getElementById("closeVip");
@@ -481,14 +512,53 @@
       if (event.target === vipModal) closeVipModal();
     });
 
+    // ===== Modal DESBAN =====
+    const desbanModal = document.getElementById("desbanModal");
+    const desbanBtn = document.getElementById("desbanBtn");
+    const closeDesban = document.getElementById("closeDesban");
+    const whatsDesban = document.getElementById("whatsDesban");
+
+    function setupWhats(){
+      const phone = "558296963727"; // 55 + DDD + número
+      const msg = "Ola tenho interesse no desban do site";
+      const link = `https://wa.me/${phone}?text=${encodeURIComponent(msg)}`;
+      whatsDesban.href = link;
+    }
+
+    function openDesban(e){
+      if (e) e.preventDefault();
+      desbanModal.style.display = "flex";
+      desbanModal.setAttribute("aria-hidden", "false");
+      closeDesban.focus();
+    }
+
+    function closeDesbanModal(){
+      desbanModal.style.display = "none";
+      desbanModal.setAttribute("aria-hidden", "true");
+      desbanBtn.focus();
+    }
+
+    desbanBtn.addEventListener("click", openDesban);
+    closeDesban.addEventListener("click", closeDesbanModal);
+
+    desbanModal.addEventListener("click", (event) => {
+      if (event.target === desbanModal) closeDesbanModal();
+    });
+
+    // ESC fecha qualquer modal aberto
     document.addEventListener("keydown", (e) => {
-      if (e.key === "Escape" && vipModal.style.display === "flex") closeVipModal();
+      if (e.key === "Escape") {
+        if (vipModal.style.display === "flex") closeVipModal();
+        if (desbanModal.style.display === "flex") closeDesbanModal();
+      }
     });
 
     document.addEventListener("DOMContentLoaded", () => {
-      fetchUserCount();
+      setupWhats();
       loadDiscord();
       tempoOnline();
+      // Atualiza o contador 1x por dia (se a página ficar aberta)
+      setInterval(tempoOnline, 60 * 60 * 1000);
     });
   </script>
 
